# playdate

./: .deny.toml  .editorconfig  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md  cargo-playdate.json  codemagic.yaml  flake.nix  rust-toolchain.toml  rustfmt.toml
api/allocator/: Cargo.toml  README.md
api/allocator/src/: global.rs  lib.rs  local.rs
api/callback/: Cargo.toml
api/callback/src/: lib.rs  scope.rs
api/callback/src/arg/: mod.rs
api/callback/src/into/: mod.rs  sealed.rs  with.rs
api/callback/src/proto/: mod.rs
api/callback/src/proxy/: default.rs  mod.rs  ud.rs  unsafe.rs
api/callback/src/storage/: associate.rs  key.rs  kmap.rs  mod.rs  tmap.rs  unique.rs
api/callback/src/util/: macros.rs  marker.rs  mod.rs  ptr.rs
api/callback/tests/: adaptor.rs  other.rs
api/callback/tests/common/: mock.rs
api/color/: Cargo.toml  Crate.md  README.md
api/color/src/: fmt.rs  lib.rs
api/color/src/pattern/: gfxp.rs  mod.rs
api/ctrl/: Cargo.toml  README.md
api/ctrl/examples/: README.md  accelerometer.rs  buttons.rs
api/ctrl/src/: api.rs  buttons.rs  lib.rs  peripherals.rs
api/ctrl/src/api/: accelerometer.rs  buttons.rs
api/display/: Cargo.toml  Crate.md  README.md
api/display/src/: lib.rs
api/fs/: Cargo.toml  README.md
api/fs/examples/: README.md  simple.rs
api/fs/src/: api.rs  cache.rs  error.rs  file.rs  lib.rs  op.rs  options.rs  path.rs  seek.rs
api/gfx/: Cargo.toml  Crate.md  README.md
api/gfx/examples/: README.md  bitmap.rs  font.rs  text.rs  tilemap.rs  video.rs
api/gfx/examples/assets/: © rundom_tileset_from_web - tileset-1bit.webloc
api/gfx/src/: api.rs  error.rs  lib.rs  text.rs  video.rs
api/gfx/src/bitmap/: api.rs  bitmap.rs  mod.rs  table.rs  tilemap.rs
api/gfx/src/video/: mod.rs  stream.rs
api/lua/: Cargo.toml  Crate.md  README.md
api/lua/examples/: README.md  add-function-get-arg-string.rs
api/lua/examples/Example.pdx/: main.pdz  pdxinfo
api/lua/examples/sources/: main.lua
api/lua/src/: error.rs  lib.rs
api/menu/: Cargo.toml  README.md
api/menu/examples/: README.md  custom-api-access.rs  menu.rs
api/menu/src/: cb_ctx.rs  cb_no_ctx.rs  error.rs  lib.rs  ud.rs
api/menu/src/cb/: ctx.rs  no_ctx.rs
api/playdate/: Cargo.toml  README.md
api/playdate/examples/: README.md  hello-world.rs  minimal.rs  video.rs
api/playdate/src/: lib.rs
api/rt-mock/: Cargo.toml  README.md
api/rt-mock/src/: display.rs  ffi.rs  file.rs  json.rs  lib.rs  lua.rs  miri.rs  network.rs  scoreboards.rs  sound.rs  sprite.rs  system.rs
api/rt-mock/src/ffi/: dev.rs  mod.rs
api/rt-mock/src/graphics/: mod.rs  tilemap.rs  video.rs  videostream.rs
api/scoreboards/: Cargo.toml  README.md
api/scoreboards/examples/: boards.rs
api/scoreboards/src/: error.rs  lib.rs  storage.rs
api/sound/: Cargo.toml  README.md
api/sound/examples/: README.md  fp-simple.rs  sp-simple.rs
api/sound/src/: error.rs  lib.rs  sample.rs  source.rs
api/sound/src/player/: mod.rs
api/sound/src/sample/: mod.rs
api/sprite/: Cargo.toml  Crate.md  README.md
api/sprite/examples/: README.md  handler.rs  simple.rs
api/sprite/src/: api.rs  ext.rs  lib.rs  sprite.rs
api/sprite/src/callback/: collision.rs  draw.rs  func.rs  update.rs
api/sys/: Cargo.toml  README.md
api/sys/examples/: README.md  handler.rs  hello-world.rs
api/sys/src/: allocator.rs  build.rs  error.rs  lib.rs  log.rs  macros.rs  panic.rs  print.rs  traits.rs  utils.rs
api/sys/src/macros/: mod.rs  trace.rs
api/sys/src/sys/: allocator.rs  macros.rs  mod.rs  panic.rs  proc.rs
api/system/: Cargo.toml  README.md
api/system/examples/: README.md  accelerometer.rs  buttons-callback.rs  handler-boxed.rs  handler-pinned.rs  handler-static.rs  launch-args.rs  serial-message-callback.rs  server-time-callback.rs  set-serial-message-callback.rs  update-callback.rs  update-state-in-serial-message-callback.rs
api/system/src/: event.rs  lang.rs  lib.rs  storage.rs  time.rs  update.rs
api/system/src/cb/: btn.rs  mod.rs  ntp.rs  serial.rs  update.rs
api/system/src/ctrl/: buttons.rs  mod.rs
cargo/: Cargo.toml  README.md  cargo-playdate.json
cargo/src/: config.rs  logger.rs  main.rs
cargo/src/assets/: cache.rs  mod.rs  pdc.rs  plan.rs
cargo/src/cli/: cmd.rs  deps.rs  ide.rs  mod.rs  opts.rs  target.rs  usage.txt
cargo/src/init/: bin-hl.rs  bin-ll.rs  default-bin.rs  default-lib.rs  full-metadata.toml  lib-hl.rs  mod.rs
cargo/src/layout/: cargo.rs  mod.rs  playdate.rs
cargo/src/package/: ar.rs  mod.rs
cargo/src/proc/: logging.rs  mod.rs  reader.rs  utils.rs
cargo/src/utils/: cargo.rs  logging.rs  mod.rs  path.rs  rustc.rs  workspace.rs
cargo/src/utils/cargo/: build_plan.rs  format.rs  (+4 more)
cargo/tests/: build.rs  common.rs  init.rs  run.rs  shared.rs
cargo/tests/init/: init.rs  new.rs
cargo/tests/run/: simple.rs
components/crank-indicator/: Cargo.toml  README.md
components/crank-indicator/examples/: README.md  example.rs
components/crank-indicator/src/: lib.rs
examples/rt-target-test/: Cargo.toml
examples/rt-target-test/src/: lib.rs
support/addr2line/: Cargo.toml  README.md  symbols.db
support/addr2line/.cargo/: config.toml
support/addr2line/src/: addr2line-crashlog.rs  addr2line-trace.rs  addr2line.rs  build.rs  cli.rs  db.rs  ef.rs  elf.rs  lib.rs  query-fn.sql  query-ln.sql  trace.rs
support/bindgen/: Cargo.toml  README.md
support/bindgen-cfg/: Cargo.toml  Crate.md
support/bindgen-cfg/src/: lib.rs  mask.rs
support/bindgen/src/: cfg.rs  error.rs  lib.rs  main.rs
support/device/: Cargo.toml  README.md  TODO
support/device/src/: error.rs  install.rs  lib.rs  retry.rs  run.rs  send.rs
support/gen-api-shorthands/: Cargo.toml
support/gen-api-shorthands/src/: lib.rs
support/sim-ctrl/: Cargo.toml  README.md
support/sim-ctrl/src/: lib.rs  run.rs
support/tool/: Cargo.toml  README.md
support/tool/src/: cli.rs  lib.rs  main.rs  mount.rs  report.rs
support/tool2/: Cargo.toml
support/tool2/src/: cli.rs  main.rs
support/utils/: Cargo.toml  README.md
support/utils/src/: compile.rs  consts.rs  layout.x  lib.rs
(+113 files in other folders)
