[workspace]
resolver = "2"
members = [
	"cargo",
	"api/*",
	"support/*",
	# "components/*"
]
default-members = ["cargo", "support/tool"]
exclude = ["cargo/tests/crates/**/*"]


[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alex Koz <a@koz.email>"]
homepage = "https://github.com/boozook/playdate"
repository = "https://github.com/boozook/playdate.git"


[workspace.dependencies]
color = { version = "0.1", path = "api/color", package = "playdate-color", default-features = false }
ctrl = { version = "0.1", path = "api/ctrl", package = "playdate-controls", default-features = false }
display = { version = "0.1", path = "api/display", package = "playdate-display", default-features = false }
fs = { version = "0.1", path = "api/fs", package = "playdate-fs", default-features = false }
gfx = { version = "0.2", path = "api/gfx", package = "playdate-graphics", default-features = false }
menu = { version = "0.1", path = "api/menu", package = "playdate-menu", default-features = false }
sound = { version = "0.1", path = "api/sound", package = "playdate-sound", default-features = false }
sprite = { version = "0.1", path = "api/sprite", package = "playdate-sprite", default-features = false }
system = { version = "0.2", path = "api/system", package = "playdate-system", default-features = false }
sys = { version = "0.1", path = "api/sys", package = "playdate-sys", default-features = false }

build = { version = "0.2", path = "support/build", package = "playdate-build", default-features = false }
utils = { version = "0.1", path = "support/utils", package = "playdate-build-utils", default-features = false }
bindgen = { version = "0.1", path = "support/bindgen", package = "playdate-bindgen", default-features = false }
tool = { version = "0.1", path = "support/tool", package = "playdate-tool" }

# Deps that used multiple times,
# This is to prevent various versions in the deps-tree for faster compilation time
dirs = "5.0"
fs_extra = "1.3"
semver = "1.0"
regex = "1"
log = "0.4"
env_logger = "0.10"
clap = "4.3"
serde = "1.0"
serde_json = "1.0"
toml = "0.7"
