[workspace]
resolver = "2"
members = ["cargo", "api/*", "support/*", "components/*", "examples/*"]
default-members = ["cargo", "support/tool", "support/bindgen"]
exclude = ["cargo/tests/crates/**/*"]


[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alex Koz <a@koz.email>"]
homepage = "https://github.com/boozook/playdate"
repository = "https://github.com/boozook/playdate.git"


[workspace.dependencies]
color = { version = "0.2", path = "api/color", package = "playdate-color", default-features = false }
ctrl = { version = "0.3", path = "api/ctrl", package = "playdate-controls", default-features = false }
display = { version = "0.3", path = "api/display", package = "playdate-display", default-features = false }
fs = { version = "0.2", path = "api/fs", package = "playdate-fs", default-features = false }
gfx = { version = "0.6", path = "api/gfx", package = "playdate-graphics", default-features = false }
lua = { version = "0.1", path = "api/lua", package = "playdate-lua", default-features = false }
menu = { version = "0.3", path = "api/menu", package = "playdate-menu", default-features = false }
scoreboards = { version = "0.1", path = "api/scoreboards", package = "playdate-scoreboards", default-features = false }
sound = { version = "0.4", path = "api/sound", package = "playdate-sound", default-features = false }
sprite = { version = "0.3", path = "api/sprite", package = "playdate-sprite", default-features = false }
system = { version = "0.3", path = "api/system", package = "playdate-system", default-features = false }
sys = { version = "0.5", path = "api/sys", package = "playdate-sys", default-features = false }

tool = { version = "0.1", path = "support/tool", package = "playdate-tool" }
build = { version = "0.4", path = "support/build", package = "playdate-build", default-features = false }
utils = { version = "0.3", path = "support/utils", package = "playdate-build-utils", default-features = false }
device = { version = "0.2", path = "support/device", package = "playdate-device" }
simulator = { version = "0.1", path = "support/sim-ctrl", package = "playdate-simulator-utils", default-features = false }
bindgen = { version = "0.2", path = "support/bindgen", package = "playdate-bindgen", default-features = false }
bindgen-cfg = { version = "0.2", path = "support/bindgen-cfg", package = "playdate-bindgen-cfg", default-features = false }
gen-api-shorthands = { version = "0.1", path = "support/gen-api-shorthands", package = "playdate-gen-api-shorthands" }

# Deps that used multiple times,
# This is to prevent various versions in the deps-tree for faster compilation time
dirs = "6.0"
fs_extra = "1.3"
semver = "1.0"
regex = "1"
log = "0.4"
env_logger = "0.11"
clap = "4.5"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
futures-lite = "2.6"
thiserror = "2.0"
tokio = { version = "1.43", default-features = false }
async-std = { version = "1.13", default-features = false }

proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }


[workspace.metadata.playdate.options.assets]
dependencies = true
overwrite = false
