[package]
name = "cargo-playdate"
version = "0.3.11"
readme = "README.md"
description = "Build tool for neat yellow console."
keywords = ["playdate", "build", "cargo", "plugin", "cargo-subcommand"]
categories = [
	"game-development",
	"command-line-utilities",
	"development-tools",
	"development-tools::cargo-plugins",
	"development-tools::build-utils",
]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[[bin]]
name = "cargo-playdate"
path = "src/main.rs"


[dependencies]
once_cell = "1.18"
try-lazy-init = "0.0.2"

clap_lex = "0.5"
dirs.workspace = true
fs_extra.workspace = true

cargo = "=0.73.1"
cargo-util = "=0.2.5"
cargo-platform = "0.1.3"

semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
toml_edit = { version = "0.20", features = ["serde"] }
regex.workspace = true
byteorder = "1.4"
zip = { version = "0.6.6", features = ["time"] }
walkdir = "2.4"

anyhow = "1.0"
termcolor = "1.3"

env_logger.workspace = true
log.workspace = true

[dependencies.build]
workspace = true
default-features = false
features = ["assets-report", "toml"]

[dependencies.tool]
workspace = true
features = ["clap", "cli"]

[dependencies.clap]
workspace = true
default-features = true
features = [
	"default",
	"std",
	"color",
	"help",
	"usage",
	"error-context",
	"suggestions",
	"derive",
	"cargo",
	"env",
	"string",
	"unicode",
]


[dev-dependencies]
target = "2.0.0"
rand = "0.8"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27", features = ["signal"] }


[features]
default = []
usb = ["tool/usb"]
