[package]
name = "cargo-playdate"
version = "0.4.0-beta.1"
readme = "README.md"
description = "Build tool for neat yellow console."
keywords = ["playdate", "build", "cargo", "plugin", "cargo-subcommand"]
categories = [
	"game-development",
	"command-line-utilities",
	"development-tools",
	"development-tools::cargo-plugins",
	"development-tools::build-utils",
]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[[bin]]
name = "cargo-playdate"
path = "src/main.rs"


[dependencies]
once_cell = "1.19"
try-lazy-init = "0.0.2"

clap_lex = "0.7"
dirs.workspace = true
fs_extra.workspace = true

cargo = "0.78.1"
cargo-util = "0.2.10"
cargo-platform = "0.1.8"
cargo-util-schemas = "0.2.0"

semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
toml_edit = { version = "0.22", features = ["serde"] }
regex.workspace = true
byteorder = "1.5"
zip = { version = "0.6.6", features = ["time"] }
walkdir = "2.5"

anyhow = "1.0"
anstyle = "1"

env_logger.workspace = true
log.workspace = true

futures-lite.workspace = true


[dependencies.build]
workspace = true
default-features = false
features = ["assets-report", "toml"]

[dependencies.device]
workspace = true
features = ["clap", "tokio", "async-std", "tokio-serial"]

[dependencies.simulator]
workspace = true
features = ["async-std"]

[dependencies.clap]
workspace = true
default-features = true
features = [
	"default",
	"std",
	"color",
	"help",
	"usage",
	"error-context",
	"suggestions",
	"derive",
	"cargo",
	"env",
	"string",
	"unicode",
]


[dev-dependencies]
target = "2.0.0"
rand = "0.8"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.28", features = ["signal"] }
