[package]
name = "playdate-callback"
version = "0.1.0"
readme = "README.md"
description = "Callback-related utils for Playdate API."
keywords = ["playdate", "gamedev", "callback", "closure", "cffi"]
categories = ["game-development", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
jit = []           # closures through CFFI via JIT instead of full-fledged proxy functions
allocator-api = []


[dependencies]
pastey = "0.1"

[dependencies.duplicate]
features = ["module_disambiguation", "pretty_errors", "fail-on-warnings"]
workspace = true

[dependencies.sys]
workspace = true
optional = true


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zbuild-std=core,alloc"]


[badges.maintenance]
status = "actively-developed"


[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = [
	'cfg(pdtrace, values("all", "cb-add", "cb-rem", "cb-get", "cb-call", "cb-into"))', # tracing
]
