[package]
name = "playdate-controls"
version = "0.3.9"
readme = "README.md"
description = "High-level controls API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = ["sys/default"]

# playdate-sys features, should be shared because it's build configuration:

bindgen-runtime = ["sys/bindgen-runtime"]
bindgen-static = ["sys/bindgen-static"]
bindings-derive-debug = ["sys/bindings-derive-debug"]


[dependencies]
gen-api-shorthands.workspace = true
sys = { workspace = true, default-features = false }
system = { workspace = true, default-features = false }

[dev-dependencies]
gfx = { workspace = true, default-features = false }
display = { workspace = true, default-features = false }
system = { workspace = true, default-features = false, features = ["try-trait-v2"] }

[[example]]
name = "buttons"
crate-type = ["dylib", "staticlib"]
path = "examples/buttons.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[[example]]
name = "accelerometer"
crate-type = ["dylib", "staticlib"]
path = "examples/accelerometer.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[package.metadata.playdate]
bundle-id = "rs.playdate.ctrl"


[package.metadata.docs.rs]
all-features = false
features = [
	"sys/bindings-derive-default",
	"sys/bindings-derive-eq",
	"sys/bindings-derive-copy",
	"bindings-derive-debug",
	"sys/bindings-derive-hash",
	"sys/bindings-derive-ord",
	"sys/bindings-derive-partialeq",
	"sys/bindings-derive-partialord",
]
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
