[package]
name = "playdate-fs"
version = "0.2.12"
readme = "README.md"
description = "High-level file-system API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "filesystem", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies.sys]
workspace = true
default-features = false
features = ["alloc"]

[dependencies.no_std_io2] # io-traits implementation
version = "0.9"
default-features = false
features = ["alloc"]
optional = true

# build with --cfg portable_io_unstable_all
[dependencies.portable-io] # io-traits implementation
version = "0.0.4"
default-features = false
features = ["alloc"]
optional = true


[[example]]
name = "simple"
crate-type = ["dylib", "staticlib"]
path = "examples/simple.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[[example]]
name = "simple-bin"
crate-type = ["bin"]
path = "examples/simple.rs"
required-features = ["sys/lang-items", "sys/entry-point"]


[package.metadata.playdate]
bundle-id = "rs.playdate.fs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]


[badges.maintenance]
status = "actively-developed"


[lints]
workspace = true
