[package]
name = "playdate-graphics"
version = "0.2.1"
readme = "README.md"
description = "High-level graphics API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "rendering::graphics-api", "graphics", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = ["sys/default", "color/default", "fs/default"]
# sys- features:
lang-items = ["sys/lang-items", "color/lang-items", "fs/lang-items"]
allocator = ["sys/allocator", "color/allocator", "fs/allocator"]
panic-handler = ["sys/panic-handler", "color/panic-handler", "fs/panic-handler"]
eh-personality = ["sys/eh-personality", "color/eh-personality", "fs/eh-personality"]
error-ctx = ["sys/error-ctx", "color/error-ctx", "fs/error-ctx"]
bindgen-runtime = ["sys/bindgen-runtime", "color/bindgen-runtime", "fs/bindgen-runtime"]
bindgen-static = ["sys/bindgen-static", "color/bindgen-static", "fs/bindgen-static"]
bindings-derive-default = ["sys/bindings-derive-default", "color/bindings-derive-default", "fs/bindings-derive-default"]
bindings-derive-eq = ["sys/bindings-derive-eq", "color/bindings-derive-eq", "fs/bindings-derive-eq"]
bindings-derive-copy = ["sys/bindings-derive-copy", "color/bindings-derive-copy", "fs/bindings-derive-copy"]
bindings-derive-debug = ["sys/bindings-derive-debug", "color/bindings-derive-debug", "fs/bindings-derive-debug"]
bindings-derive-hash = ["sys/bindings-derive-hash", "color/bindings-derive-hash", "fs/bindings-derive-hash"]
bindings-derive-ord = ["sys/bindings-derive-ord", "color/bindings-derive-ord", "fs/bindings-derive-ord"]
bindings-derive-partialeq = ["sys/bindings-derive-partialeq", "color/bindings-derive-partialeq", "fs/bindings-derive-partialeq"]
bindings-derive-partialord = ["sys/bindings-derive-partialord", "color/bindings-derive-partialord", "fs/bindings-derive-partialord"]
bindings-derive-constparamty = ["sys/bindings-derive-constparamty", "color/bindings-derive-constparamty", "fs/bindings-derive-constparamty"]
bindings-documentation = ["sys/bindings-documentation", "color/bindings-documentation", "fs/bindings-documentation"]


[dependencies]
sys = { workspace = true, default-features = false }
fs = { workspace = true, default-features = false }
color = { workspace = true, default-features = false }


[[example]]
name = "bitmap"
crate-type = ["dylib", "staticlib"]
path = "examples/bitmap.rs"

[[example]]
name = "font"
crate-type = ["dylib", "staticlib"]
path = "examples/font.rs"

[package.metadata.playdate]
bundle-id = "rs.playdate.menu"


[package.metadata.docs.rs]
all-features = false
features = [
	"bindings-derive-default",
	"bindings-derive-eq",
	"bindings-derive-copy",
	"bindings-derive-debug",
	"bindings-derive-hash",
	"bindings-derive-ord",
	"bindings-derive-partialeq",
	"bindings-derive-partialord",
]
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = [
	"-Zunstable-options",
	"-Zrustdoc-scrape-examples",
	"-Zbuild-std=core,alloc",
]
