[package]
name = "playdate-graphics"
version = "0.6.1"
readme = "README.md"
description = "High-level graphics API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "rendering::graphics-api", "graphics", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
sys = { workspace = true, default-features = false }
fs = { workspace = true, default-features = false }
color = { workspace = true, default-features = false }

[dev-dependencies]
display = { workspace = true, default-features = false }
system = { workspace = true, default-features = false, features = ["try-trait-v2"] }

[[example]]
name = "bitmap"
crate-type = ["dylib", "staticlib"]
path = "examples/bitmap.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[[example]]
name = "font"
crate-type = ["dylib", "staticlib"]
path = "examples/font.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[package.metadata.playdate]
bundle-id = "rs.playdate.menu"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
