[package]
name = "playdate-graphics"
version = "0.6.1"
readme = "README.md"
description = "High-level graphics API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "rendering::graphics-api", "graphics", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
sys.workspace = true
fs.workspace = true
color.workspace = true

[dependencies.callback]
workspace = true
features = ["sys"]


[dev-dependencies]
display = { workspace = true, default-features = false }
system = { workspace = true, default-features = false }


[[example]]
name = "bitmap"
crate-type = ["dylib", "staticlib"]
path = "examples/bitmap.rs"
required-features = ["sys/lang-items", "sys/entry-point", "color/gfxp"]

[[example]]
name = "tilemap"
crate-type = ["dylib", "staticlib"]
path = "examples/tilemap.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[[example]]
name = "video"
crate-type = ["dylib", "staticlib"]
path = "examples/video.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

# [[example]]
# name = "font"
# crate-type = ["dylib", "staticlib"]
# path = "examples/font.rs"
# required-features = ["sys/lang-items", "sys/entry-point"]


[package.metadata.playdate]
bundle-id = "rs.playdate.menu"
[package.metadata.playdate.dev-assets]
# used in tilemap example
"tiles-table-16-16.png" = "examples/assets/rundom_tileset_from_web-table-16-16.png"
# used in video example
"video.pdv" = "${PLAYDATE_SDK_PATH}/Disk/System/Setup.pdx/videos/outro.pdv"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]


[badges.maintenance]
status = "actively-developed"
