[package]
name = "playdate-lua"
version = "0.1.4"
readme = "README.md"
description = "High-level Lua API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors = ["Paul Young", "Alex Koz <a@koz.email>"]
homepage.workspace = true
repository.workspace = true


[features]
default = ["sys/default"]

# playdate-sys features, should be shared because it's build configuration:

bindgen-runtime = ["sys/bindgen-runtime"]
bindgen-static = ["sys/bindgen-static"]
bindings-derive-debug = ["sys/bindings-derive-debug"]


[dependencies]
gen-api-shorthands.workspace = true
sys = { workspace = true, default-features = false }

[dev-dependencies]
system = { workspace = true, default-features = false }


[[example]]
name = "add-function-get-arg-string"
crate-type = ["dylib", "staticlib"]
path = "examples/add-function-get-arg-string.rs"
required-features = ["sys/entry-point", "sys/lang-items"]


[package.metadata.playdate]
bundle-id = "rs.playdate.lua"

[package.metadata.playdate.dev-assets]
# The Lua runtime expects us to provide a main.pdz file at the root.
#
# Compiled with `pdc --skip-unknown --strip sources/main.lua Example.pdx`
"main.pdz" = "examples/Example.pdx/main.pdz"


[package.metadata.docs.rs]
all-features = false
features = [
	"sys/bindings-derive-default",
	"sys/bindings-derive-eq",
	"sys/bindings-derive-copy",
	"bindings-derive-debug",
	"sys/bindings-derive-hash",
	"sys/bindings-derive-ord",
	"sys/bindings-derive-partialeq",
	"sys/bindings-derive-partialord",
]
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
