[package]
name = "playdate-lua"
version = "0.1.5"
readme = "README.md"
description = "High-level Lua API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors = ["Paul Young", "Alex Koz <a@koz.email>"]
homepage.workspace = true
repository.workspace = true


[dependencies]
sys.workspace = true

[dev-dependencies]
system.workspace = true


[[example]]
name = "add-function-get-arg-string"
crate-type = ["dylib", "staticlib"]
path = "examples/add-function-get-arg-string.rs"
required-features = ["sys/entry-point", "sys/lang-items"]


[package.metadata.playdate]
bundle-id = "rs.playdate.lua"

[package.metadata.playdate.dev-assets]
# The Lua runtime expects us to provide a main.pdz file at the root.
#
# Compiled with `pdc --skip-unknown --strip sources/main.lua Example.pdx`
"main.pdz" = "examples/Example.pdx/main.pdz"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]
