[package]
name = "playdate-menu"
version = "0.3.1"
readme = "README.md"
description = "High-level system menu API built on-top of Playdate API"
keywords = ["playdate", "sdk", "api", "gamedev"]
categories = ["game-development", "api-bindings", "no-std"]
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
sys.workspace = true
gfx.workspace = true # only AsBitmap used

duplicate.workspace = true

[dev-dependencies]
system.workspace = true


[[example]]
name = "menu"
crate-type = ["dylib", "staticlib"]
path = "examples/menu.rs"
required-features = ["sys/lang-items", "sys/entry-point"]

[package.metadata.playdate]
bundle-id = "rs.playdate.menu"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples", "-Zbuild-std=core,alloc"]


[badges.maintenance]
status = "actively-developed"
